app/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: httpbin
  labels:
    istio-injection: enabled
spec: {}
status: {}
