app/peerauth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: httpbin
  namespace: onlineboutique
spec:
  mtls:
    mode: STRICT
