app/frontend-httproute.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: frontend-ingress
#   namespace: onlineboutique
# spec:
#   hosts:
#     - frontend.endpoints.phx-01h57q8t23amkhpscfjenrp9y2.cloud.goog
#   gateways:
#   - asm-ingress/asm-ingressgateway
#   http:
#   - route:
#     - destination:
#         host: frontend
#         port:
#           number: 80
# ---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: onlineboutique
spec:
  parentRefs:
  - name: istio-gateway
    namespace: asm-ingress
  hostnames: ["frontend.example.com"]
  rules:
    - backendRefs:
      - name: frontend
        port: 80
