app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: mesh2httpbin
  namespace: onlineboutique
spec:
  parentRefs:
  - name: istio-gateway
    namespace: asm-ingress
    # sectionName: http
  hostnames: 
    - "httpbin.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /status
    - path:
        type: PathPrefix
        value: /delay
    backendRefs:
    - name: httpbin
      port: 8000
